--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   go_router: ^13.1.0
   dio: ^5.4.1
   flutter_dotenv: ^5.0.2
+  flutter_riverpod: ^2.4.8
 
 dev_dependencies:
   flutter_test:
