--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_riverpod: ^2.4.8
   card_swiper: ^3.0.1
   animate_do: ^3.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
